--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -73,8 +73,11 @@ jobs:
           file_pattern: recipe/meta.yaml
 
       # Open a Pull Request from the branch to the main repo
+      # The GMT_FEEDSTOCK_TOKEN personal access token secret should have
+      # a scope of "repo: public_repo" for access to public repositories
       - name: Open Pull Request to bump version (testing only)
+        if: github.repository != 'conda-forge/gmt-feedstock'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GMT_FEEDSTOCK_TOKEN }}
         run: |
-          gh pr create --title "Bump GMT dev version to ${{ steps.version_info.outputs.VERSION_STRING }}" --body "Test auto bump version" --repo seisman/gmt-feedstock --base devel --draft
+          gh pr create --title "Bump GMT dev version to ${{ steps.version_info.outputs.VERSION_STRING }}" --body "Test auto bump version" --repo GenericMappingTools/gmt-feedstock --base devel --draft
