--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,15 +1,12 @@
 package:
   name: gmt
-  version: 6.2.0dev
-
+  version: 6.2.0.dev0+d666a63
 source:
   git_url: https://github.com/GenericMappingTools/gmt.git
-  git_rev: 79c89c48bde13f01b9069bfe555f57b5d962e02a
-
+  git_rev: d666a638d77706c0d1ea3dcb962834a214862cc1
 build:
   number: 0
   skip: True  # [win and vc<14]
-
 requirements:
   build:
     - cmake
@@ -44,7 +41,6 @@ requirements:
     - dcw-gmt  # [not win]
     - ffmpeg
     - graphicsmagick
-
 test:
   commands:
     - gmt defaults -Vd
@@ -53,21 +49,19 @@ test:
     - gmt begin -Vd
     - gmt coast -R0/10/0/10 -JM6i -Ba -Ggray -ENG+p1p,blue -Vd
     - gmt end
-
 about:
   home: https://www.generic-mapping-tools.org
   license: LGPL-3.0-or-later
   license_file: LICENSE.TXT
   summary: 'The Generic Mapping Tools.'
   description: |
-      GMT is an open source collection of about 80 command-line tools for
-      manipulating geographic and Cartesian data sets (including filtering,
-      trend fitting, gridding, projecting, etc.) and producing PostScript
-      illustrations ranging from simple x–y plots via contour maps to
-      artificially illuminated surfaces and 3D perspective views; the GMT
-      supplements add another 40 more specialized and discipline-specific
-      tools. GMT supports over 30 map projections and transformations
-
+    GMT is an open source collection of about 80 command-line tools for
+    manipulating geographic and Cartesian data sets (including filtering,
+    trend fitting, gridding, projecting, etc.) and producing PostScript
+    illustrations ranging from simple x–y plots via contour maps to
+    artificially illuminated surfaces and 3D perspective views; the GMT
+    supplements add another 40 more specialized and discipline-specific
+    tools. GMT supports over 30 map projections and transformations
 extra:
   recipe-maintainers:
     - ocefpaf
