--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,17 +1,12 @@
-{% set version = "6.0.0rc5" %}
-
 package:
   name: gmt
-  version: {{ version }}
-
+  version: 6.2.0.dev0+a1a189c
 source:
-  url: https://github.com/GenericMappingTools/gmt/releases/download/{{ version }}/gmt-{{ version }}-src.tar.gz
-  sha256: 10154b216dfc290b95700b6620ef1c89b170074c14173fd585c30f980e270f38
-
+  git_url: https://github.com/GenericMappingTools/gmt.git
+  git_rev: a1a189cafe784c8dc9e3777e2f17a78c2885948d
 build:
   number: 0
   skip: True  # [win and vc<14]
-
 requirements:
   build:
     - cmake
@@ -45,8 +40,7 @@ requirements:
     - gshhg-gmt  # [not win]
     - dcw-gmt  # [not win]
     - ffmpeg
-    - graphicsmagick  # [not win]
-
+    - graphicsmagick
 test:
   commands:
     - gmt defaults -Vd
@@ -55,21 +49,19 @@ test:
     - gmt begin -Vd
     - gmt coast -R0/10/0/10 -JM6i -Ba -Ggray -ENG+p1p,blue -Vd
     - gmt end
-
 about:
   home: https://www.generic-mapping-tools.org
-  license: LGPL-3.0
+  license: LGPL-3.0-or-later
   license_file: LICENSE.TXT
   summary: 'The Generic Mapping Tools.'
   description: |
-      GMT is an open source collection of about 80 command-line tools for
-      manipulating geographic and Cartesian data sets (including filtering,
-      trend fitting, gridding, projecting, etc.) and producing PostScript
-      illustrations ranging from simple x–y plots via contour maps to
-      artificially illuminated surfaces and 3D perspective views; the GMT
-      supplements add another 40 more specialized and discipline-specific
-      tools. GMT supports over 30 map projections and transformations
-
+    GMT is an open source collection of about 80 command-line tools for
+    manipulating geographic and Cartesian data sets (including filtering,
+    trend fitting, gridding, projecting, etc.) and producing PostScript
+    illustrations ranging from simple x–y plots via contour maps to
+    artificially illuminated surfaces and 3D perspective views; the GMT
+    supplements add another 40 more specialized and discipline-specific
+    tools. GMT supports over 30 map projections and transformations
 extra:
   recipe-maintainers:
     - ocefpaf
