--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -10,18 +10,20 @@ jobs:
   bump-dev-version:
     name: Bump GMT development version
     runs-on: ubuntu-latest
+    if: github.repository != 'conda-forge/gmt-feedstock'
 
     steps:
       # Checkout current git repository
       - name: Checkout
-        uses: actions/checkout@v2.3.1
+        uses: actions/checkout@v2.3.2
         with:
-          ref: ${{ github.head_ref }}
+          repository: conda-forge/gmt-feedstock
+          ref: devel
 
       # Install yq - A portable command-line YAML processor
       - name: Install yq
         run: |
-          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/3.3.2/yq_linux_amd64
+          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/3.3.4/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
 
       # Get the GMT package's latest hash from Github
@@ -51,9 +53,6 @@ jobs:
       # Change development package version and source git revision
       - name: Update package version and git revision
         run: |
-          # Create and checkout a new git branch for the update
-          git checkout -b update/${{ steps.version_info.outputs.VERSION_STRING }}
-
           # Update the recipe/meta.yaml file with new version info
           yq write --inplace recipe/meta.yaml package.version ${{ steps.version_info.outputs.VERSION_STRING }}
           yq write --inplace recipe/meta.yaml source.git_rev ${{ steps.version_info.outputs.SHA_HASH }}
@@ -69,21 +68,29 @@ jobs:
       - name: Check meta.yaml contents
         run: cat recipe/meta.yaml
 
-      # Commit changed recipe/meta.yaml file to Github
-      - name: Commit meta.yaml changes to a branch
-        uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.repository != 'conda-forge/gmt-feedstock'
-        with:
-          commit_message: '[ci skip] [skip ci] [cf admin skip] ***NO_CI*** Bump GMT dev version to ${{ steps.version_info.outputs.VERSION_STRING }}'
-          branch: update/${{ steps.version_info.outputs.VERSION_STRING }}
-          file_pattern: recipe/meta.yaml
-
-      # Open a Pull Request from the branch to the main repo
+      # Open a Pull Request from personal fork to the upstream repo
       # The GMT_FEEDSTOCK_TOKEN personal access token secret should have
       # a scope of "repo: public_repo" for access to public repositories
-      # - name: Open Pull Request to bump version (testing only)
-      #   if: github.repository != 'conda-forge/gmt-feedstock'
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GMT_FEEDSTOCK_TOKEN }}
-      #   run: |
-      #     gh pr create --title "Bump GMT dev version to ${{ steps.version_info.outputs.VERSION_STRING }}" --body "Test auto bump version" --repo GenericMappingTools/gmt-feedstock --base devel --draft
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3.4.0
+        with:
+          title: "Bump GMT dev version to ${{ steps.version_info.outputs.VERSION_STRING }}"
+          commit-message: "Bump GMT dev version to ${{ steps.version_info.outputs.VERSION_STRING }}"
+          reviewers: "weiji14"  # TODO change to someone else
+          base: devel
+          branch: update/${{ steps.version_info.outputs.VERSION_STRING }}
+          delete-branch: true
+          token: ${{ secrets.GMT_FEEDSTOCK_TOKEN }}
+          draft: true
+          push-to-fork: GenericMappingTools/gmt-feedstock
+          body: |
+            It is very likely that the current package version for this feedstock is out of date.
+
+            This PR will update the following package:
+                - gmt=`${{ steps.version_info.outputs.VERSION_STRING }}`
+
+            Notes for merging this PR:
+              1. Feel free to push to the bot's branch to update this PR if needed.
+              2. Checklist before merging this PR:
+              - [ ] Dependencies have been updated if changed
+              - [ ] Tests have passed
