--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -2,9 +2,9 @@ on:
   pull_request:
     branches:
       - devel
-  # Schedule runs on 9am every Sunday
+  # Schedule runs on 9am every Tuesday
   schedule:
-    - cron: '0 9 * * 0'
+    - cron: '0 9 * * 2'
 
 jobs:
   bump-dev-version:
@@ -112,4 +112,4 @@ jobs:
             [1]: https://github.com/GenericMappingTools/gmt
             [2]: https://github.com/GenericMappingTools/gmt/commit/${{ steps.version_info.outputs.OLD_SHA_HASH }}
             [3]: https://github.com/GenericMappingTools/gmt/commit/${{ steps.version_info.outputs.NEW_SHA_HASH }}
-            [4]: https://github.com/GenericMappingTools/gmt/compare/${{ steps.version_info.outputs.OLD_VERSION_STRING }}...${{ steps.version_info.outputs.NEW_VERSION_STRING }}
+            [4]: https://github.com/GenericMappingTools/gmt/compare/${{ steps.version_info.outputs.OLD_SHA_HASH }}...${{ steps.version_info.outputs.NEW_SHA_HASH }}
