--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -1,7 +1,7 @@
 on:
-  pull_request:
-    branches:
-      - devel
+  push: []
+    # branches:
+    #   - devel
   # Schedule runs on 9am every Tuesday
   schedule:
     - cron: '0 9 * * 2'
@@ -93,7 +93,7 @@ jobs:
           delete-branch: true
           token: ${{ secrets.GITHUB_TOKEN }}
           draft: true
-          # push-to-fork: GenericMappingTools/gmt-feedstock
+          push-to-fork: GenericMappingTools/gmt-feedstock
           body: |
             **This is an automated pull request!**
 
