--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -13,17 +13,27 @@ jobs:
     if: github.repository == 'GenericMappingTools/gmt-feedstock'
 
     steps:
+      # Generate token from GenericMappingTools bot
+      - uses: tibdex/github-app-token@v1.1.0
+        id: generate-token
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+
       # Checkout current git repository
       - name: Checkout
         uses: actions/checkout@v2.3.3
         with:
+          # token: ${{ steps.generate-token.outputs.token }}
           repository: conda-forge/gmt-feedstock
           ref: devel
+        run: |
+          git config user.password ${{ steps.generate-token.outputs.token }}
 
       # Install yq - A portable command-line YAML processor
       - name: Install yq
         run: |
-          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/3.4.0/yq_linux_amd64
+          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
 
       # Get the GMT package's current (old) and latest (new) hash
@@ -82,7 +92,7 @@ jobs:
 
       # Open a Pull Request from organization (GenericMappingTools) fork to the upstream (conda-forge) repo
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3.4.0
+        uses: peter-evans/create-pull-request@v3.4.1
         with:
           title: "Bump GMT from ${{ steps.version_info.outputs.OLD_VERSION_STRING }} to ${{ steps.version_info.outputs.NEW_VERSION_STRING }}"
           commit-message: "Bumps GMT dev version from ${{ steps.version_info.outputs.OLD_VERSION_STRING }} to ${{ steps.version_info.outputs.NEW_VERSION_STRING }}"
@@ -91,9 +101,9 @@ jobs:
           base: devel
           branch: update/${{ steps.version_info.outputs.NEW_VERSION_STRING }}
           delete-branch: true
-          token: ${{ secrets.GITHUB_TOKEN }}
           draft: true
           push-to-fork: GenericMappingTools/gmt-feedstock
+          token: ${{ steps.generate-token.outputs.token }}
           body: |
             **This is an automated pull request!**
 
