--- a/.github/workflows/bumpdevversion.yml
+++ b/.github/workflows/bumpdevversion.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       # Generate token from GenericMappingTools bot
-      - uses: tibdex/github-app-token@v1.1.0
+      - uses: tibdex/github-app-token@v1.1.1
         id: generate-token
         with:
           app_id: ${{ secrets.APP_ID }}
@@ -22,13 +22,11 @@ jobs:
 
       # Checkout current git repository
       - name: Checkout
-        uses: actions/checkout@v2.3.3
+        uses: actions/checkout@v2.3.4
         with:
-          # token: ${{ steps.generate-token.outputs.token }}
+          token: ${{ steps.generate-token.outputs.token }}
           repository: conda-forge/gmt-feedstock
           ref: devel
-        run: |
-          git config user.password ${{ steps.generate-token.outputs.token }}
 
       # Install yq - A portable command-line YAML processor
       - name: Install yq
@@ -95,7 +93,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3.4.1
         with:
           title: "Bump GMT from ${{ steps.version_info.outputs.OLD_VERSION_STRING }} to ${{ steps.version_info.outputs.NEW_VERSION_STRING }}"
-          commit-message: "Bumps GMT dev version from ${{ steps.version_info.outputs.OLD_VERSION_STRING }} to ${{ steps.version_info.outputs.NEW_VERSION_STRING }}"
+          commit-message: "Bump GMT dev version from ${{ steps.version_info.outputs.OLD_VERSION_STRING }} to ${{ steps.version_info.outputs.NEW_VERSION_STRING }}"
           author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           # reviewers: ""  # TODO change to maintainer on conda-forge/gmt-feedstock
           base: devel
