Do not package gshhg and dcw data on Windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,8 +42,8 @@ requirements:
     - zlib
     - curl
     - pcre
-    - gshhg-gmt  # [not win]
-    - dcw-gmt  # [not win]
+    - gshhg-gmt
+    - dcw-gmt
     - ffmpeg
     - graphicsmagick
 
