--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: gmt
-  version: 6.2.0.dev12+922af84
+  version: 6.2.0rc1
 source:
   git_url: https://github.com/GenericMappingTools/gmt.git
-  git_rev: 922af84734e067dadbf850cdf8033970aad0d271
+  git_rev: 8f882363001447ed73107adbe4326cec02455844
 build:
   number: 0
   skip: True  # [win and vc<14]
