--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,9 @@
 package:
   name: gmt
-  version: 6.2.0rc2
+  version: 6.3.0.dev0+13dde94
 source:
   git_url: https://github.com/GenericMappingTools/gmt.git
-  git_rev: d133c0673c051dc13d5c839659273174d063f6ad
+  git_rev: 13dde94b9b8620f81efedf846ec47989b3ad01e0
 build:
   number: 0
   skip: True  # [win and vc<14]
